--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -1,34 +1,43 @@
-一、要件定義と要素整理
-１，要件定義とは
+# サイトの要件定義と要素整理をしてみよう
+
+この章では、サイトを作る際の要件定義と要素の整理について解説します。
+
+## 要件定義とは
+
 制作が始まる前の上流工程として、要件定義というステップがあります。
 ウェブサイトを制作する際に、このような内容を要件定義したほうがいいと思います。
-−どんなウェブサイトを作るか。
-−どんな機能が必要か。
+
+− どんなウェブサイトを作るか。
+− どんな機能が必要か。
 
 ざっくりした内容ではなく、具体的に書くことをオススメです。
 
-２，なぜ要件定義
+## なぜ要件定義
+
 最初からざっくりした考えをまとまらないと、企画資料や制作が途中でぐるぐる変わったりして、何回も同じものを修正・作り直しすることになる可能性があります。
 逆に、事前から細かく機能を決めれば、「これも入れたい」「それも入れたい」など、作る途中で思いつきのアイディアに影響されず、一気にサイトを作ることが可能です。
 
-３，今回の要件定義について
+## 今回の要件定義について
+
 今回「LoveLive！参加者募集サイト」の制作を例として説明すると。
-−どんなウェブサイトを作るか。
-「LoveLive！」のアニメで登場された、アイドルコンテスト「LoveLive！公式サイト」を作る。
+
+− どんなウェブサイトを作るか。
+  - 「LoveLive！」のアニメで登場された、アイドルコンテスト「LoveLive！公式サイト」を作る。
+
 今回はすでに設計されたものがあるため、手短く要件定義することができます。
 通常の場合、まずはターゲットユーザーを定義して、ターゲットユーザーにどんな体験を与えたいのかを考えないと行けないです。
 ここではすでにあったものから推定すいれば、もともとサイトを作った人が何を考えたかがわかると思います。
 今回の制作は、工数などを考えて、TOPページとライブ中継ページの2ページだけにすることになります。
 と、このような必要かどうかの判断も、要件定義の一部です。
 
+## 要素とは
 
-
-4、要素とは
 ウェブページにあるボタン、画像、テキストなど様々な情報表示、動作するものが、このウェブサイトの「要素」と呼ばれています。
 通常でしたら、どの要素をどの位置に置くかは、ターゲットユーザーを分析した上で、設計者よりきちんと考えて最も合理的だと思われる位置に決まります。ターゲットユーザーがよく使うボタン・機能をクリックしやすいところに置くや、設計者がユーザーに一番伝えたいことを見やすいところに置くなど…いろんなことを考えて「最も合理的」な方向を目指して設計を行うことです。
 今回はすでにあるサイトを作ることなので、「要素や位置が決められた」状態で製作用の企画資料を作ればOKという、深く考えることがいらなくて比較的に楽な作業です。
 
-5、今回の要素整理について
+## 今回の要素整理について
+
 アニメ内のキャプチャからサイトの構成要素を分析してみましょう。
 
 まず、ウェブサイトのグローバルメニュに記載されている内容はこちらーー
@@ -36,13 +45,15 @@ TOP、LIVE STAGE、OUTLINE、SCHEDULE、SPECIAL、LINK、FAQ
 
 1つずつ見て行きましょう。
 
-TOP
+### TOP
+
 字面通り、ウェブサイトのTOPページを意味するはずで、よくある機能で、ユーザーがウェブサイトを見ている時、どのページにいても1クリックでTOPページへ戻ることができます。
 人の閲覧習慣に準じて一番見やすい左上に置いたのは、このサイトの設計者である人に、ターゲットユーザーにとって一番大事、もしくはターゲットユーザーに一番クリックしてほしいと思われるからです。
 また、TOPページを構成する要素はグローバルメニュ以外、各ページの共通要素もあります。
 ヘッダーにロゴと、「メールマガジン」、facebookシェア、つぶやき、お問い合わせがあって、フッターには利用規約や権利情報表示などが掲載されています。
 
-LIVE STAGE
+### LIVE STAGE
+
 アニメ内でネット生中継するページが見えます。そのシーンでは「CONTENTS」というテキストになっていますが、位置的にはこれと同じです。
 クリックしてページ遷移すると、メニュにあるテキストが変わるという事自体はできなくもないが、実際に必要がない場合がほとんどなので、ここでは全部「LIVE STAGE」に統一しましょう。
 そして、この「LIVE STAGE」の中身は、キャプチャから見て推測するとこういった要素で構成されているかと思います。
@@ -54,32 +65,38 @@ LIVE STAGE
 
 余興でこのサイトに関して筆者の推測を下に置いときます。ご参考までにしていただければと思います。
 
-OUTLINE
+### OUTLINE
+
 テキストで推測すると、たぶんコンテストの概要や募集要項などの内容が記載されています。
 
-SCHEDULE
+### SCHEDULE
+
 テキストで推測すると、たぶんコンテストの選考スケジュールや催行スケジュールなどの内容が記載されています。
 
-SPECIAL
+### SPECIAL
+
 テキストだけで何が掲載されているか推測しにくいけど、たぶん歴代優勝者コメントやコラボキャンペーンなどの情報でしょうか。
 
-LINK
+### LINK
+
 関連法人、個人の公式サイトなどが掲載されているでしょう。
 
-FAQ
+### FAQ
+
 よくある質問やお問い合わせなどの内容が掲載されているでしょう。
 
 以上の要件定義、要素整理に基いて、サイトマップと仕様書などの作成を一気にやりましょう！
 
 【画像1　要件定義と要素整理】
 
-二、サイトマップの作成
-1、サイトマップとは
+## サイトマップの作成
+
 ウェブサイトのページ数とページの階層を表示する図がサイトマップです。
 サイトマップがあれば、サイトに何ページあるかと、ページとページの関連性などが一見で分かります。それを見て、工数なども推測できます。
 ページ数の多いサイトなら、サイトマップがあれば制作もだいぶ早くなるし、ページ漏れのリスクもだいぶ減らせられます。
 
-2、サイトマップの書き方
+## サイトマップの書き方
+
 個人的にオススメなツールはエクセルです。
 画像を作るというイメージでパワーポイントがいいかと思う方もいるかもしれないが、実はセル結合したり枠線を描画したりするほうが楽です。
 特に大規模のサイトのサイトマップを書く際に、エクセルは無限に書けますので、非常に使いやすいと思います。
@@ -87,7 +104,8 @@ FAQ
 
 作るときは、階層などを意識して、外部リンクを明確に表示するよう作ったほうがオススメです。
 
-3、今回のサイトマップについて
+## 今回のサイトマップについて
+
 第一章で書いた「要件整理」をちゃんとまとまれば、サイトマップはほぼ考えずに作れると思います。
 今回作るのは「TOP」と「LIVE STAGE」の2ページです。さらに、「LIVE STAGE」ページ内に、ポップアップ画面を設計しました。
 一番上層のページをTOPにして、下層にLIVE STAGEを書きます。他に外部リンクであるSNSボタンをつけて完成です。
@@ -95,26 +113,29 @@ FAQ
 
 【画像2　サイトマップ】
 
-三、ワイヤーフレームと仕様書の作成
-1、ワイヤーフレームと仕様書
+## ワイヤーフレームと仕様書の作成
+
 ワイヤフレームはサイトの各ページごとにある、1ページにある要素の種類・数・大体の位置を示すものです。
 仕様書は、それぞれの要素に具体的に何をどう表示するか、動作の演出などを明記するものです。
 場合によって、両方をまとめて書くこともありますが、分けて書くこともあります。
 サイトの内容が豊かであればあるほど、仕様書の内容が多くなるので分けて書くことをおすすめです。
 1ページずつにワイヤーフレームと仕様書は必要なので、ページ数が多ければ多いほど、ワイヤーフレームと仕様書のページ数も多くなります。
 
-2、ワイヤーフレームと仕様書の心得
+## ワイヤーフレームと仕様書の心得
+
 ツール：ワイヤーフレームはパワーポイントでもエクセルでもいいですが、仕様書はエクセルをおすすめです。
 要素の分類：大枠3種類に分けられるーー画像、テキスト、ボタン。更に動作の要素を入れるとーースクロール、ポップアップなど。色で分けるか、もしくは形で分けるように書くことをおすすめです。
 デザイン回避：ワイヤーフレームはあくまで要素がページ内にあることを示すための資料なので、デザインなどはなるべく入れないことをおすすめです。何故かと言うと、このワイヤーフレームを参考にデザイナーさんがよしなにグラフィックとUIを作ってくれますから。どんなデザインがいいのかは、アートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。派手な色をつけたりいろんな形を使ったりすると、資料自体がわかりづらくなって、デザイナーさんのクリエイト活動に妨害する可能性もあります。
 仕様書は箇条書き：1つの要素、1つの動作に対して、箇条書きする必要があります。仕様書を見るエンジニアさんは、考えずにコーディングできることを目指しましょう。
 
-3、今回のワイヤーフレームと仕様書について
+## 今回のワイヤーフレームと仕様書について
+
 要件定義ですでにわかったのは、今回のページ数も要素も少ないです。
 なので作業を早めにするため、ワイヤーフレームと仕様書をまとめて書きました。
 1ページずつを見て行きましょう。
 
-TOP
+### TOP
+
 共通のヘッダー、グローバルメニュ、フッター以外、アニメ内では、画像の展示のみに見えます。
 画像の表示方法はカルーセルということはわかりますが、下にあるドットがアニメのキャプチャから見るとフッター内になってしまいます。
 どう見て要素としてフッター内に入れる可能性が少ないと思います。LIVE STAGEにもドットがフッター内にあるけど、生中継のページになってますので、実際のサイトでしたら映像にはこういう仕様も取らないはずだと思います。
@@ -123,7 +144,8 @@ TOP
 
 【画像3　TOP仕様書】
 
-LIVE STAGE
+### LIVE STAGE
+
 共通要素の他に、一見「ニコニコ動画」の仕様似てます。
 生中継はもちろん映像が中心で、ほかの機能は映像と関連するものになっていると想定しています。
 更に、映像エリアの隣に広告スペースに見えます。たぶんここでスポンサーたちの広告が掲載されているだろう。
@@ -131,7 +153,8 @@ LIVE STAGE
 
 【画像4　LIVE STAGE仕様書】
 
-ほかポップアップ
+### ほかポップアップ
+
 「サイトマップ」について書いてましたが、エラーページも想定するようにと。
 ただしエラーが発生しない限り、エラーページも見れないので、ここではエラーの代わりに「まだ作ってない」の提示ポップアップを用意しました。
 ほかに、映像コメントの体験を与えるためのSNSコメントポップアップと、投票結果再現するための結果ポップアップを作りました。
