chore(Ch1): Markdown のリスト形式になるように記号を置換した

--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -7,8 +7,8 @@
 制作が始まる前の上流工程として、要件定義というステップがあります。
 ウェブサイトを制作する際に、このような内容を要件定義したほうがいいと思います。
 
-− どんなウェブサイトを作るか。
-− どんな機能が必要か。
+- どんな Web サイトを作るか。
+- どんな機能が必要か。
 
 ざっくりした内容ではなく、具体的に書くことをオススメです。
 
@@ -21,7 +21,7 @@
 
 今回「LoveLive！参加者募集サイト」の制作を例として説明すると。
 
-− どんなウェブサイトを作るか。
+- どんな Web サイトを作るか。
   - 「LoveLive！」のアニメで登場された、アイドルコンテスト「LoveLive！公式サイト」を作る。
 
 今回はすでに設計されたものがあるため、手短く要件定義することができます。
