chore(Ch1): ウェブサイト -> Web サイト

--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -4,8 +4,7 @@
 
 ## 要件定義とは
 
-制作が始まる前の上流工程として、要件定義というステップがあります。
-ウェブサイトを制作する際に、このような内容を要件定義したほうがいいと思います。
+制作が始まる前の上流工程として、要件定義という段階があります。 Web サイトを制作する際に、このような内容を要件定義したほうがいいと思います。
 
 - どんな Web サイトを作るか。
 - どんな機能が必要か。
@@ -32,7 +31,7 @@
 
 ## 要素とは
 
-ウェブページにあるボタン、画像、テキストなど様々な情報表示、動作するものが、このウェブサイトの「要素」と呼ばれています。
+ウェブページにあるボタン、画像、テキストなど様々な情報表示、動作するものが、この Web サイトの「要素」と呼ばれています。
 通常でしたら、どの要素をどの位置に置くかは、ターゲットユーザーを分析した上で、設計者よりきちんと考えて最も合理的だと思われる位置に決まります。ターゲットユーザーがよく使うボタン・機能をクリックしやすいところに置くや、設計者がユーザーに一番伝えたいことを見やすいところに置くなど…いろんなことを考えて「最も合理的」な方向を目指して設計を行うことです。
 今回はすでにあるサイトを作ることなので、「要素や位置が決められた」状態で製作用の企画資料を作ればOKという、深く考えることがいらなくて比較的に楽な作業です。
 
@@ -40,14 +39,14 @@
 
 アニメ内のキャプチャからサイトの構成要素を分析してみましょう。
 
-まず、ウェブサイトのグローバルメニュに記載されている内容はこちらーー
+まず、Web サイトのグローバルメニュに記載されている内容はこちらーー
 TOP、LIVE STAGE、OUTLINE、SCHEDULE、SPECIAL、LINK、FAQ
 
 1つずつ見て行きましょう。
 
 ### TOP
 
-字面通り、ウェブサイトのTOPページを意味するはずで、よくある機能で、ユーザーがウェブサイトを見ている時、どのページにいても1クリックでTOPページへ戻ることができます。
+字面通り、Web サイトのTOPページを意味するはずで、よくある機能で、ユーザーが Web サイトを見ている時、どのページにいても1クリックでTOPページへ戻ることができます。
 人の閲覧習慣に準じて一番見やすい左上に置いたのは、このサイトの設計者である人に、ターゲットユーザーにとって一番大事、もしくはターゲットユーザーに一番クリックしてほしいと思われるからです。
 また、TOPページを構成する要素はグローバルメニュ以外、各ページの共通要素もあります。
 ヘッダーにロゴと、「メールマガジン」、facebookシェア、つぶやき、お問い合わせがあって、フッターには利用規約や権利情報表示などが掲載されています。
@@ -91,7 +90,7 @@ TOP、LIVE STAGE、OUTLINE、SCHEDULE、SPECIAL、LINK、FAQ
 
 ## サイトマップの作成
 
-ウェブサイトのページ数とページの階層を表示する図がサイトマップです。
+ Web サイトのページ数とページの階層を表示する図がサイトマップです。
 サイトマップがあれば、サイトに何ページあるかと、ページとページの関連性などが一見で分かります。それを見て、工数なども推測できます。
 ページ数の多いサイトなら、サイトマップがあれば制作もだいぶ早くなるし、ページ漏れのリスクもだいぶ減らせられます。
 
