fix(Ch1): RedPen に指摘されないようにカンマを使う回数を減らした

--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -14,7 +14,8 @@
 ## なぜ要件定義
 
 最初からざっくりした考えをまとまらないと、企画資料や制作が途中でぐるぐる変わったりして、何回も同じものを修正・作り直しすることになる可能性があります。
-逆に、事前から細かく機能を決めれば、「これも入れたい」「それも入れたい」など、作る途中で思いつきのアイディアに影響されず、一気にサイトを作ることが可能です。
+
+逆に、事前から細かく機能を決めれば「これも入れたい」「それも入れたい」など、作る途中で思いつきのアイディアに影響されず、一気にサイトを作ることが可能です。
 
 ## 今回の要件定義について
 
@@ -31,8 +32,12 @@
 
 ## 要素とは
 
-ウェブページにあるボタン、画像、テキストなど様々な情報表示、動作するものが、この Web サイトの「要素」と呼ばれています。
-通常でしたら、どの要素をどの位置に置くかは、ターゲットユーザーを分析した上で、設計者よりきちんと考えて最も合理的だと思われる位置に決まります。ターゲットユーザーがよく使うボタン・機能をクリックしやすいところに置くや、設計者がユーザーに一番伝えたいことを見やすいところに置くなど…いろんなことを考えて「最も合理的」な方向を目指して設計を行うことです。
+ウェブページにあるボタン・画像・テキストなど、様々な情報表示・動作するものが、この Web サイトの「要素」と呼ばれています。
+
+どの要素をどの位置に置くかは、ターゲットユーザーを分析した上で設計者よりきちんと考えて最も合理的だと思われる位置に決まります。
+
+ターゲットユーザーがよく使うボタン・機能をクリックしやすいところに置くや、設計者がユーザーに一番伝えたいことを見やすいところに置くなど…いろんなことを考えて「最も合理的」な方向を目指して設計を行うことです。
+
 今回はすでにあるサイトを作ることなので、「要素や位置が決められた」状態で製作用の企画資料を作ればOKという、深く考えることがいらなくて比較的に楽な作業です。
 
 ## 今回の要素整理について
@@ -40,7 +45,14 @@
 アニメ内のキャプチャからサイトの構成要素を分析してみましょう。
 
 まず、Web サイトのグローバルメニュに記載されている内容はこちらーー
-TOP、LIVE STAGE、OUTLINE、SCHEDULE、SPECIAL、LINK、FAQ
+
+- TOP
+- LIVE STAGE
+- OUTLINE
+- SCHEDULE
+- SPECIAL
+- LINK
+- FAQ
 
 1つずつ見て行きましょう。
 
@@ -49,14 +61,22 @@ TOP、LIVE STAGE、OUTLINE、SCHEDULE、SPECIAL、LINK、FAQ
 字面通り、Web サイトのTOPページを意味するはずで、よくある機能で、ユーザーが Web サイトを見ている時、どのページにいても1クリックでTOPページへ戻ることができます。
 人の閲覧習慣に準じて一番見やすい左上に置いたのは、このサイトの設計者である人に、ターゲットユーザーにとって一番大事、もしくはターゲットユーザーに一番クリックしてほしいと思われるからです。
 また、TOPページを構成する要素はグローバルメニュ以外、各ページの共通要素もあります。
-ヘッダーにロゴと、「メールマガジン」、facebookシェア、つぶやき、お問い合わせがあって、フッターには利用規約や権利情報表示などが掲載されています。
+
+ヘッダーにロゴ・メールマガジン・Facebookシェア・つぶやき・お問い合わせがあって、フッターには利用規約や権利情報表示などが掲載されています。
 
 ### LIVE STAGE
 
 アニメ内でネット生中継するページが見えます。そのシーンでは「CONTENTS」というテキストになっていますが、位置的にはこれと同じです。
 クリックしてページ遷移すると、メニュにあるテキストが変わるという事自体はできなくもないが、実際に必要がない場合がほとんどなので、ここでは全部「LIVE STAGE」に統一しましょう。
 そして、この「LIVE STAGE」の中身は、キャプチャから見て推測するとこういった要素で構成されているかと思います。
-「映像タイトル」、「出演者」、「映像生中継」、「映像情報」、「ユーザーコメント」、「投票」、「広告スペース」
+
+- 映像タイトル
+- 出演者
+- 映像生中継
+- 映像情報
+- ユーザーコメント
+- 投票
+- 広告スペース
 
 参加するアイドルグループがみるOUTLINEやSCHEDULEなどより左に位置することは、設計者が参加者の他に、ライブをネット上で見るファンも大事にするからでしょう。
 
