--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -19,15 +19,15 @@
 
 ## 今回の要件定義について
 
-今回「LoveLive！参加者募集サイト」の制作を例として説明すると。
+今回のラブライブ！参加者募集サイトの制作を例として説明すると、
 
 - どんな Web サイトを作るか。
-  - 「LoveLive！」のアニメで登場された、アイドルコンテスト「LoveLive！公式サイト」を作る。
+  - ラブライブ！のアニメで登場した、アイドルコンテスト募集サイト」を作る。
 
 今回はすでに設計されたものがあるため、手短く要件定義することができます。
 通常の場合、まずはターゲットユーザーを定義して、ターゲットユーザーにどんな体験を与えたいのかを考えないと行けないです。
 ここではすでにあったものから推定すいれば、もともとサイトを作った人が何を考えたかがわかると思います。
-今回の制作は、工数などを考えて、TOPページとライブ中継ページの2ページだけにすることになります。
+今回の制作は、工数などを考えて、TOP ページとライブ中継ページの2ページだけにすることになります。
 と、このような必要かどうかの判断も、要件定義の一部です。
 
 ## 要素とは
@@ -38,7 +38,7 @@
 
 ターゲットユーザーがよく使うボタン・機能をクリックしやすいところに置くや、設計者がユーザーに一番伝えたいことを見やすいところに置くなど…いろんなことを考えて「最も合理的」な方向を目指して設計を行うことです。
 
-今回はすでにあるサイトを作ることなので、「要素や位置が決められた」状態で製作用の企画資料を作ればOKという、深く考えることがいらなくて比較的に楽な作業です。
+今回はすでにあるサイトを作ることなので、「要素や位置が決められた」状態で製作用の企画資料を作れば OK という、深く考えることがいらなくて比較的に楽な作業です。
 
 ## 今回の要素整理について
 
@@ -58,17 +58,17 @@
 
 ### TOP
 
-字面通り、Web サイトのTOPページを意味するはずで、よくある機能で、ユーザーが Web サイトを見ている時、どのページにいても1クリックでTOPページへ戻ることができます。
+字面通り、Web サイトの TOP ページを意味するはずで、よくある機能で、ユーザーが Web サイトを見ている時、どのページにいても1クリックで TOP ページへ戻ることができます。
 人の閲覧習慣に準じて一番見やすい左上に置いたのは、このサイトの設計者である人に、ターゲットユーザーにとって一番大事、もしくはターゲットユーザーに一番クリックしてほしいと思われるからです。
-また、TOPページを構成する要素はグローバルメニュ以外、各ページの共通要素もあります。
+また、TOP ページを構成する要素はグローバルメニュ以外、各ページの共通要素もあります。
 
-ヘッダーにロゴ・メールマガジン・Facebookシェア・つぶやき・お問い合わせがあって、フッターには利用規約や権利情報表示などが掲載されています。
+ヘッダーにロゴ・メールマガジン・シェア・つぶやき・お問い合わせがあって、フッターには利用規約や権利情報表示などが掲載されています。
 
 ### LIVE STAGE
 
-アニメ内でネット生中継するページが見えます。そのシーンでは「CONTENTS」というテキストになっていますが、位置的にはこれと同じです。
-クリックしてページ遷移すると、メニュにあるテキストが変わるという事自体はできなくもないが、実際に必要がない場合がほとんどなので、ここでは全部「LIVE STAGE」に統一しましょう。
-そして、この「LIVE STAGE」の中身は、キャプチャから見て推測するとこういった要素で構成されているかと思います。
+アニメ内でネット生中継するページが見えます。そのシーンでは CONTENTS というテキストになっていますが、位置的にはこれと同じです。
+クリックしてページ遷移すると、メニュにあるテキストが変わるという事自体はできなくもないが、実際に必要がない場合がほとんどなので、ここでは全部 LIVE STAGE に統一しましょう。
+そして、この LIVE STAGE の中身は、キャプチャから見て推測するとこういった要素で構成されているかと思います。
 
 - 映像タイトル
 - 出演者
@@ -78,9 +78,9 @@
 - 投票
 - 広告スペース
 
-参加するアイドルグループがみるOUTLINEやSCHEDULEなどより左に位置することは、設計者が参加者の他に、ライブをネット上で見るファンも大事にするからでしょう。
+参加するアイドルグループがみる OUTLINE や SCHEDULE などより左に位置することは、設計者が参加者の他に、ライブをネット上で見るファンも大事にするからでしょう。
 
-最初に書いた要件定義を見ると、他のページは今回全部作る必要がないため、実はここまで書いてOKです。どこまで資料が必要なのかは、要件定義で明確化されているため、余計な作業を増やして時間を無駄遣いすることがなくなるでしょう。
+最初に書いた要件定義を見ると、他のページは今回全部作る必要がないため、実はここまで書いて OK です。どこまで資料が必要なのかは、要件定義で明確化されているため、余計な作業を増やして時間を無駄遣いすることがなくなるでしょう。
 
 余興でこのサイトに関して筆者の推測を下に置いときます。ご参考までにしていただければと思います。
 
@@ -106,11 +106,11 @@
 
 以上の要件定義、要素整理に基いて、サイトマップと仕様書などの作成を一気にやりましょう！
 
-【画像1　要件定義と要素整理】
+【画像1 要件定義と要素整理】
 
 ## サイトマップの作成
 
- Web サイトのページ数とページの階層を表示する図がサイトマップです。
+Web サイトのページ数とページの階層を表示する図がサイトマップです。
 サイトマップがあれば、サイトに何ページあるかと、ページとページの関連性などが一見で分かります。それを見て、工数なども推測できます。
 ページ数の多いサイトなら、サイトマップがあれば制作もだいぶ早くなるし、ページ漏れのリスクもだいぶ減らせられます。
 
@@ -126,11 +126,11 @@
 ## 今回のサイトマップについて
 
 第一章で書いた「要件整理」をちゃんとまとまれば、サイトマップはほぼ考えずに作れると思います。
-今回作るのは「TOP」と「LIVE STAGE」の2ページです。さらに、「LIVE STAGE」ページ内に、ポップアップ画面を設計しました。
-一番上層のページをTOPにして、下層にLIVE STAGEを書きます。他に外部リンクであるSNSボタンをつけて完成です。
+今回作るのは TOP と LIVE STAGE の2ページです。さらに、LIVE STAGE ページ内に、ポップアップ画面を設計しました。
+一番上層のページを TOP にして、下層に LIVE STAGE を書きます。他に外部リンクである SNS ボタンをつけて完成です。
 今回は極めて簡単な内容だけど、本当は各下層ページに更に下層ページある、ポップアップやエラーページまで、サイトにあらゆる表示可能なページを全部作らないといけないです。なので、一回ドキュメントを起こす前に、紙で草稿を書くこともオススメです。
 
-【画像2　サイトマップ】
+【画像2 サイトマップ】
 
 ## ワイヤーフレームと仕様書の作成
 
@@ -144,7 +144,7 @@
 
 ツール：ワイヤーフレームはパワーポイントでもエクセルでもいいですが、仕様書はエクセルをおすすめです。
 要素の分類：大枠3種類に分けられるーー画像、テキスト、ボタン。更に動作の要素を入れるとーースクロール、ポップアップなど。色で分けるか、もしくは形で分けるように書くことをおすすめです。
-デザイン回避：ワイヤーフレームはあくまで要素がページ内にあることを示すための資料なので、デザインなどはなるべく入れないことをおすすめです。何故かと言うと、このワイヤーフレームを参考にデザイナーさんがよしなにグラフィックとUIを作ってくれますから。どんなデザインがいいのかは、アートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。派手な色をつけたりいろんな形を使ったりすると、資料自体がわかりづらくなって、デザイナーさんのクリエイト活動に妨害する可能性もあります。
+デザイン回避：ワイヤーフレームはあくまで要素がページ内にあることを示すための資料なので、デザインなどはなるべく入れないことをおすすめです。何故かと言うと、このワイヤーフレームを参考にデザイナーさんがよしなにグラフィックと UI を作ってくれますから。どんなデザインがいいのかは、アートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。派手な色をつけたりいろんな形を使ったりすると、資料自体がわかりづらくなって、デザイナーさんのクリエイト活動に妨害する可能性もあります。
 仕様書は箇条書き：1つの要素、1つの動作に対して、箇条書きする必要があります。仕様書を見るエンジニアさんは、考えずにコーディングできることを目指しましょう。
 
 ## 今回のワイヤーフレームと仕様書について
@@ -157,26 +157,27 @@
 
 共通のヘッダー、グローバルメニュ、フッター以外、アニメ内では、画像の展示のみに見えます。
 画像の表示方法はカルーセルということはわかりますが、下にあるドットがアニメのキャプチャから見るとフッター内になってしまいます。
-どう見て要素としてフッター内に入れる可能性が少ないと思います。LIVE STAGEにもドットがフッター内にあるけど、生中継のページになってますので、実際のサイトでしたら映像にはこういう仕様も取らないはずだと思います。
+どう見て要素としてフッター内に入れる可能性が少ないと思います。
+LIVE STAGE にもドットがフッター内にあるけど、生中継のページになってますので、実際のサイトでしたら映像にはこういう仕様も取らないはずだと思います。
 なので、考えた結果として、画像のカルーセル表示だけにしました。
 推測した結果、トップページの訴求は、「コンテストの盛り上がり」と「歴代受賞者の宣伝」で、華やかなポスターをいっぱい見れる設計だと思います。
 
-【画像3　TOP仕様書】
+【画像3 TOP 仕様書】
 
 ### LIVE STAGE
 
 共通要素の他に、一見「ニコニコ動画」の仕様似てます。
 生中継はもちろん映像が中心で、ほかの機能は映像と関連するものになっていると想定しています。
 更に、映像エリアの隣に広告スペースに見えます。たぶんここでスポンサーたちの広告が掲載されているだろう。
-ちょっと説明しますと、もともと「ニコニコ動画」みたいなコメント機能があると思われますが、今回は工数が足りないためちょっと改造して、「何かをコメントする」という似てる体験をユーザーに与えるためSNSコメントという形を取らせていただきました。
+ちょっと説明しますと、もともと「ニコニコ動画」みたいなコメント機能があると思われますが、今回は工数が足りないためちょっと改造して、「何かをコメントする」という似てる体験をユーザーに与えるため SNS コメントという形を取らせていただきました。
 
-【画像4　LIVE STAGE仕様書】
+【画像4 LIVE STAGE 仕様書】
 
 ### ほかポップアップ
 
 「サイトマップ」について書いてましたが、エラーページも想定するようにと。
 ただしエラーが発生しない限り、エラーページも見れないので、ここではエラーの代わりに「まだ作ってない」の提示ポップアップを用意しました。
-ほかに、映像コメントの体験を与えるためのSNSコメントポップアップと、投票結果再現するための結果ポップアップを作りました。
+ほかに、映像コメントの体験を与えるための SNS コメントポップアップと、投票結果再現するための結果ポップアップを作りました。
 上記ポップアップは、1ページとして存在するのではないため、サイトマップでは仕様をページと区別して反映しました。
 
-【画像5〜画像7　ポップアップ仕様書×3】
+【画像5〜画像7 ポップアップ仕様書×3】
