chore(Ch2): 見出しレベルの調整

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -83,19 +83,19 @@ OS X の場合は最初からターミナルがインストールされている
 
 まずは ググりましょう。ググる方法にも多く結果が出やすい手法があります。
 
-**ググるための言葉を区切る**
+#### ググるための言葉を区切る
 
 例えば「CSSで背景色をつけるやり方」と検索した時よりも「CSS 背景色 やり方」で検索したほうが検索結果の件数が増えます。
 
 検索エンジンは「CSSで背景色をつけるやり方」のような文章を受け付けるのがまだ苦手です。そのため、文章よりも単語ごとに区切ったほうが検索結果の件数が増えます。
 
-**「○○ とは」で検索する**
+#### 「○○ とは」で検索する
 
 より入門的な内容を探したい場合は「○○ とは」で検索することをおすすめします。例えば「JavaScript とは」や「CSS とは」といった感じです。
 
 だいたい「○○ とは」というタイトルで入門的な記事を書く傾向にあるため、このように検索したほうがより入門よりの記事が引っかかります。
 
-**エラーメッセージをそのまま検索する**
+#### エラーメッセージをそのまま検索する
 
 何かしらを実行してそれが上手くいかなかった際に、表示されたエラーメッセージをそのまま検索すると、解決方法が出やすくなります。
 
@@ -103,7 +103,7 @@ OS X の場合は最初からターミナルがインストールされている
 
 もし検索してでてきた内容が英語だったら、それを自分のブログに日本語の記事として掲載すると、後から検索した人が助かるかもしれません。また、自分にとっても記憶に残りやすくなるので良いと思います。
 
-**期間を絞る**
+#### 期間を絞る
 
 JavaScript の情報は2011年以前の情報はあまり役に立たないことが多いです。
 
