--- a/draft/ch01.md
+++ b/draft/ch01.md
@@ -1,51 +1,48 @@
-# サイトの要件定義と要素整理をしてみよう
+# Web サイトの要件定義と要素整理をしてみよう
 
-この章では、サイトを作る際の要件定義と要素の整理について解説します。
+この章では、Web サイトを作る際におこなう、要件定義と要素整理について解説します。
 
 ## 要件定義とは
 
-制作が始まる前の上流工程として、要件定義という段階があります。Web サイトを制作する際に、このような内容を要件定義したほうが良いです。
+Web サイト制作が始まる前に、要件定義という工程をおこないます。そこでは、以下の内容を要件定義します。
 
 - どんな Web サイトを作るか
 - どんな機能が必要か
 
-ざっくりした内容ではなく、具体的に書くことをオススメします。
+それぞれ、大まかではなく細かく書いたほうが良いです。
 
-## なぜ要件定義
+## なぜ要件定義をするのか
 
-最初からざっくりした考えをまとまらないと、企画資料や制作が途中でぐるぐる変わったりして、何回も同じものを修正・作り直しすることになる可能性があります。
+最初に要件定義をすることで、企画書の変更頻度が減ります。これにより、作業の巻き戻りを最小限に抑えることができます。
 
-逆に、事前から細かく機能を決めれば「これも入れたい」「それも入れたい」など、作る途中で思いつきのアイディアに影響されず、一気にサイトを作ることが可能です。
+これにより「あれも入れたい」といった、思いつきのアイディアに影響されず、一気に Web サイトを作ることが可能です。
 
 ## 今回の要件定義について
 
-今回のラブライブ！参加者募集サイトの制作を例として説明すると、
+では実際に要件定義をしていきます。例として、「ラブライブ参加者募集サイト」で説明します。
 
-- どんな Web サイトを作るか
-  - ラブライブ！のアニメで登場した、アイドルコンテスト募集サイト」を作る
+まず、どんな Web サイトを作るかというところから始めます。今回は「ラブライブ」という、アイドルコンテストの募集サイトを作ります。
 
-今回はすでに設計されたものがあるため、手短く要件定義することができます。
+手順としては、まずはターゲットユーザを定義します。そして、ターゲットユーザにどんな体験を与えたいのか考えます。
 
-通常、まずはターゲットユーザを定義し、ターゲットユーザにどんな体験を与えたいのかを考えないといけないです。
-ここではすでにあったものから推定すれば、もともとサイトを作った人が何を考えたかがわかると思います。
-今回の制作は、工数などを考えて、TOP ページとライブ中継ページの2ページだけにすることにしました。
-と、このような必要かどうかの判断も、要件定義の一部です。
+今回は、工数・スケジュールを考えた結果、トップページとライブ中継ページの 2 ページのみ作ることにしました。このような判断も、要件定義の一部です。
 
 ## 要素とは
 
-ウェブページにあるボタンや画像、テキストなど、様々な情報表示・動作するものが、この Web サイトの「要素」と呼ばれます。
+Web サイト内にある、ボタンや画像、テキストなど、様々な情報表示・動作するものを、Web サイトの「要素」と呼びます。
 
-どの要素をどの位置に置くかは、ターゲットユーザを分析した上で設計者よりきちんと考えて最も合理的だと思われる位置に決まります。
+どの要素をどの位置へ置くかは、設計者が最も合理的だと考えた場所になります。そのため合理的なのか判断するためにターゲットユーザの分析が必要となります。
 
-ターゲットユーザが製作者が想定した目的に沿ってよく使うボタン・機能をクリックしやすいところに置くや、設計者がユーザに一番伝えたいことを見やすいところに置くなど…いろんなことを考えて「最も合理的」な方向を目指して設計を行うべきです。
+ユーザが「最も合理的」と感じる方向に向かって、さまざまなことを考え、設計するべきです。例えば、以下のことが考えられます。
 
-今回はすでにあるサイトを作ることなので、「要素や位置が決められた」状態で製作用の企画資料を作れば OK という、深く考えることがいらず、比較的に楽な作業になります。
+- ターゲットユーザがよく使いそうなボタン・機能をクリックしやすいところへ置く
+- ユーザへ一番伝えたいことを見やすいところに置く
 
-## 今回の要素整理について
+## 今回の要素について整理
 
-アニメ内のキャプチャからサイトの構成要素を分析してみます。
+アニメのキャプチャから、Web サイトを構成する要素について分析してみます。
 
-まず、Web サイトのグローバルメニュに記載されている内容はこちらーー
+まず、グローバルナビゲーションに表示されている内容は以下の通りとなります。
 
 - TOP
 - LIVE STAGE
@@ -55,23 +52,27 @@
 - LINK
 - FAQ
 
-1つずつ見ていきます。
+1 つずつ見ていきましょう。
 
 ### TOP
 
-字面通り、Web サイトの TOP ページを意味するはずで、よくある機能で、ユーザが Web サイトを見ている時、どのページにいても1クリックで TOP ページへ戻ることができます。
+字面通り Web サイトのトップページを意味します。ユーザが Web サイトを見ている時、どのページにいたとしても 1 クリックでトップページへ戻れます。
 
-人の閲覧習慣に準じて一番見やすい左上に置いたのは、このサイトの設計者である人に、ターゲットユーザにとって一番大事、もしくはターゲットユーザに一番クリックしてほしいと思われるためです。
-また、TOP ページを構成する要素はグローバルメニュ以外、各ページの共通要素もある。
+Web サイトを見る時の習慣に準じて、一番見やすい左上へ置いたのは、理由があります。この Web サイトのターゲットユーザにとって一番大事、もしくは一番クリックしてほしいという理由があります。
 
-ヘッダにロゴ・メールマガジン・シェア・つぶやき・お問い合わせがあって、フッタには利用規約や権利情報表示などが掲載されている。
+また、トップページを構成する要素は、グローバルナビゲーション以外に、各ページで使われる共通要素があります。
+
+ヘッダ部分には、ロゴ・メールマガジン・シェア・ツイート・お問い合わせがあります。フッタ部分には利用規約や権利情報が掲載されています。
 
 ### LIVE STAGE
 
-アニメ内でネット生中継するページだと思われます。そのシーンでは CONTENTS というテキストになっているが、位置的にはこれと同じです。
+ラブライブの状況をネットで生中継するページだと思われます。
 
-クリックでページ遷移すると、メニュにあるテキストが変わるという事自体はできなくもないが、実際に必要のない場合がほとんどなので、ここでは全部 LIVE STAGE に統一します。
-そして、この LIVE STAGE の中身は、キャプチャから見て推測するとこういった要素で構成されているかと思います。
+参加するアイドルグループが見る、アウトラインやスケジュールより左に位置しています。これは一体どういうことでしょうか？
+
+これは、参加するアイドルグループの他に、ライブをネット上で見るファンも大事という考えがあると思います。
+
+アニメのキャプチャからページ内容を推測すると、以下の要素で構成されているように見えます。
 
 - 映像タイトル
 - 出演者
@@ -81,110 +82,140 @@
 - 投票
 - 広告スペース
 
-参加するアイドルグループが見る OUTLINE や SCHEDULE などがより左に位置することは、設計者が参加者の他に、ライブをネット上で見るファンも大事にするからだと思われます。
+さてここで、最初に書いた要件定義を思い出しましょう。今回は「工数・スケジュールを考えた結果、トップページとライブ中継ページの 2 ページのみ作る」ということでした。
 
-最初に書いた要件定義を見ると、他のページは今回全部作る必要がないため、実はここまで書いて OK 。どこまで資料が必要なのかは、要件定義で明確化されているため、余計な作業を増やして時間を無駄遣いすることがなくなるでしょう。
+つまり他のページについて、要素整理は必要なく、要素整理をここで終わらせることができます。
 
-余興でこのサイトに関して筆者の推測を下に置きます。参考にしてみてください。
+今回、どこまで資料が必要なのかは、要件定義の段階で明確にしていました。そのため、余計な作業はなくなり、無駄な時間を過ごすことがなくなります。
+
+ここからは今回の Web サイトについて、推測を書いていきます。よければ参考にしてください。
 
 ### OUTLINE
 
-テキストで推測すると、たぶんコンテストの概要や募集要項などの内容が記載されています。
+おそらく、コンテスト概要や募集要項などの内容が記載されていると思われます。
 
 ### SCHEDULE
 
-テキストで推測すると、たぶんコンテストの選考スケジュールや催行スケジュールなどの内容が記載されています。
+おそらく、コンテスト選考スケジュールや催行スケジュールなどの内容が記載されていると思われます。
 
 ### SPECIAL
 
-テキストだけで何が掲載されているか推測しにくいけど、たぶん歴代優勝者コメントやコラボキャンペーンなどの情報だと思われます。
+おそらく、歴代優勝者コメントやコラボキャンペーンなどの情報が記載されていると思われます。これはテキストのみだと推測がしにくいです。
 
 ### LINK
 
-関連法人、個人の公式サイトなどが掲載されていると思われます。
+関連法人、個人の公式 Web サイトなどが掲載されていると思われます。
 
 ### FAQ
 
-よくある質問やお問い合わせなどの内容が掲載されていると思われます。
+よくある質問やお問い合わせなどが掲載されていると思われます。
 
-以上の要件定義、要素整理に基いて、サイトマップと仕様書などの作成をしていきます。
+以上の要件定義、要素整理に基づき、サイトマップと仕様書を作成していきます。
 
-![要素整理](ch1_01.jpg)
+![要素整理](ch01/01.jpg)
 
 ## サイトマップの作成
 
-Web サイトのページ数とページの階層を表示する図がサイトマップです。
-サイトマップがあれば、サイトに何ページあるかと、ページとページの関連性などが一見で分かる。それで工数なども推測できます。
-ページ数の多いサイトなら、サイトマップがあれば制作もだいぶ早くなるし、ページ漏れのリスクもだいぶ減らすことができます。
+Web サイトのページ数とページ階層を表示する図がサイトマップです。
+
+サイトマップは、Web サイトが何ページあるかということや、ページとページの関連性をひと目で見られます。それにより、工数も推測できます。
+
+サイトマップを用意するとメリットが二つあります。一つ目に、ページ数が多い Web サイトの場合は制作スピードを上げられます。二つ目に、ページ漏れのリスクも減らすことができます。
 
 ## サイトマップの書き方
 
-個人的にオススメなツールはエクセルです。
-画像を作るというイメージでパワーポイントがいいかと思う方もいるかもしれないが、実はセル結合したり枠線を描画したりするほうが楽になります。
-特に大規模のサイトのサイトマップを書く際に、エクセルは無限に書けるので、非常に使いやすいと思います。
-エクセルがない場合は、グーグルドライブのスプレッドシートも最低限な機能揃っていますからおすすめです。
+個人的に推奨するツールは Excel です。
 
-作るときは、階層などを意識して、外部リンクを明確に表示するよう作ったほうがおすすめです。
+画像を作るイメージから PowerPoint が良いと思う方もいるかもしれません。しかし、実はセル結合や枠線を描画して作るほうが楽です。
+
+Excel を使えない場合は、Google Drive のスプレッドシートも最低限な機能が揃っているため、おすすめです。
+
+作るときの心がけとして、階層を意識し、外部リンクは明確に表示するよう作成するのがおすすめです。
 
 ## 今回のサイトマップについて
 
-第一章で書いた「要件整理」をちゃんとまとまれば、サイトマップはほぼ考えずに作れると思います。
-今回作るのは TOP と LIVE STAGE の2ページです。さらに、LIVE STAGE ページ内に、ポップアップ画面を設計しました。
-一番上層のページを TOP にして、下層に LIVE STAGE を書きます。他に外部リンクである SNS ボタンをつけて完成です。
-今回は極めて簡単な内容だけど、本当は各下層ページに更に下層ページある、ポップアップやエラーページまで、サイトにあらゆる表示可能なページを全部作らないといけないです。
-なので、一回ドキュメントを起こす前に、紙で草稿を書くこともおすすめです。
+第一章で書いた「要件整理」をきちんとまとめれば、サイトマップはほぼ考えずに作れると思います。
 
-![サイトマップ](ch1_02.jpg)
+今回作るのはトップとライブステージの2ページです。また、ライブステージ内に、ポップアップ画面を設計しました。一番上層のページをトップとして、下層にライブステージを書きます。他に外部リンクである SNS ボタンをつけて完成です。
+
+今回は極めて簡単な内容のため、これで終わりです。本来は各下層ページにさらなる下層ページがある、Web サイトのあらゆる表示可能なページ (ポップアップやエラーページなど) を全部作らないといけません。
+
+そのため、Excel に起こす前の段階で、紙へ下書きを書くことをおすすめします。
+
+![サイトマップ](ch01/02.jpg)
 
 ## ワイヤーフレームと仕様書の作成
 
-ワイヤーフレームはサイトの各ページごとにある、1ページにある要素の種類・数・大体の位置を示すものです。
-仕様書は、それぞれの要素に具体的に何をどう表示するか、動作の演出などを明記するものです。
-場合によって、両方をまとめて書くこともあるが、分けて書くこともあります。
-サイトの内容が豊かであればあるほど、仕様書の内容が多くなるので分けて書くことをおすすめです。
-1ページずつにワイヤーフレームと仕様書は必要なので、ページ数が多ければ多いほど、ワイヤーフレームと仕様書のページ数も多くなります。
+ワイヤーフレームは Web サイトの各ページごとにある、要素の種類・数・位置を示すものです。
+
+仕様書は、それぞれの要素を具体的に何をどう表示するか、動作の演出などを明記するものです。
+
+場合によっては、両方をまとめて書いたり、分けて書くこともあります。Web サイトの内容が豊かであればあるほど、仕様書の内容は多くなるので、分けて書くことをおすすめします。
+
+1 ページごとにワイヤーフレームと仕様書は必要です。そのため、ページ数が多ければ多いほど、ワイヤーフレームと仕様書のページ数も多くなります。
 
 ## ワイヤーフレームと仕様書の心得
 
-ツール：ワイヤーフレームはパワーポイントでもエクセルでもいいが、仕様書はエクセルをおすすめです。
-要素の分類：大枠3種類に分けられるーー画像、テキスト、ボタン。更に動作の要素を入れるとーースクロール、ポップアップなど。色で分けるか、もしくは形で分けるように書くことがおすすめです。
-余計な情報を入れない：ワイヤーフレームはあくまで要素がページ内にあることを示すための資料なので、色などはなるべく入れないことがおすすめです。
-何故かと言うと、ワイヤーフレームを参考にデザイナがグラフィックと UI の制作を行うので、余計な情報があると資料自体がわかりづらくなり、混乱を招く可能性があります。
-どんなグラフィックや UI の方向性にするかは、アートディレクタの仕事なので、企画資料としては見やすいようにすることが最優先です。
-仕様書は箇条書き：1つの要素、1つの動作に対して、箇条書きする必要があります。仕様書を見るエンジニアさんは、考えずにコーディングできることを目指します。
+### ツール
+
+ワイヤーフレームは PowerPoint と Excel のどちらか好きなほうを使うのが良いです。仕様書は Excel をおすすめします。
+
+### 要素の分類
+
+大枠は 3 種類に分けられます。それは、画像・テキスト・ボタンとなります。さらに動作の要素を入れると、スクロール・ポップアップなどがあります。色もしくは形で分けるように書くことをおすすめします。
+
+### 余計な情報を入れない
+
+ワイヤーフレームはあくまで要素がページ内にあることを示すための資料です。そのため、色などはなるべく入れないのが良いです。
+
+なぜかというと、デザイナはワイヤーフレームを参考資料にして、グラフィックと UI の制作をします。そのため、余計な情報があると資料は分かりづらくなり、混乱を招くことにあります。
+
+どんなグラフィックや UI の方向性にするかは、アートディレクタの仕事です。そのため、企画資料としては見やすいようにすることが最優先です。
+
+### 仕様書は箇条書きにする
+
+それぞれの要素・動作に対して、箇条書きする必要があります。仕様書を見るエンジニアにとって、不明な点がない状態でコーディングできるよう目指します。
 
 ## 今回のワイヤーフレームと仕様書について
 
-要件定義ですでにわかったのは、今回のページ数も要素も少ないです。
-なので作業を早めにするため、ワイヤーフレームと仕様書をまとめて書きました。
-1ページずつ見ていきましょう。
+要件定義の段階で分かりましたが、今回はページ数・要素共に少ないです。
 
-### TOP
+そのため、ワイヤーフレームと仕様書をまとめて書きました。1 ページずつ見ていきましょう。
 
-共通のヘッダ、グローバルメニュ、フッタ以外、アニメ内では、画像の展示のみに見えます。
-画像の表示方法はカルーセルということはわかりますが、下にあるドットがアニメのキャプチャから見るとフッタ内になっているというのが極めて可能性低い設計です。
-LIVE STAGE にもドットがフッタ内にあるけど、生中継のページになっているので、実際のサイトでしたら映像にはこういう仕様も取らないはずだと思われます。
-なので、考えた結果として、画像のカルーセル表示だけにしました。
-推測した結果、トップページの訴求は、「コンテストの盛り上がり」と「歴代受賞者の宣伝」で、華やかな画像をいっぱい見れる設計だと思われます。
+### トップページのワイヤーフレーム
 
-![トップページのワイヤーフレーム](ch1_03.jpg)
+共通のヘッダ・グローバルナビゲーション・フッタ以外、アニメ内では、画像表示のみに見えます。
 
-### LIVE STAGE
+画像の表示方法はカルーセルということが分かります。しかし、下にあるドットがアニメのキャプチャを見るとフッタ内にあります。これは、現実だと採用される可能性が極めて低いものです。
 
-共通要素の他に、一見「ニコニコ動画」の仕様に似ています。
-生中継はもちろん映像が中心で、ほかの機能は映像と関連するものになっていると想定している。
-更に、映像エリアの隣に広告スペースに見えます。おそらくここに広告が掲載されているでしょう。
-ちょっと説明すると、もともと「ニコニコ動画」のようなコメント機能があると思われますが、今回は工数が足りないためちょっと改造して、「何かをコメントする」という似てる体験をユーザに与えるため SNS コメントという形にしました。
+ライブステージもドットがフッタ内にあります。しかし、映像を見るページでこういった表示は普通しません。
 
-![ライブステージのワイヤーフレーム](ch1_04.jpg)
+そのため考えた結果として、画像のカルーセル表示だけにしました。
+
+推測した結果、トップページの訴求は「コンテストの盛り上がり」と「歴代受賞者の宣伝」で、華やかな画像をいっぱい見れる設計だと思われます。
+
+![トップページのワイヤーフレーム](ch01/03.jpg)
+
+### ライブステージのワイヤーフレーム
+
+共通要素を除くと、「ニコニコ動画」の仕様に似ています。
+
+生中継はもちろん映像が中心で、ほかの機能は映像と関連するものになっていると想定しています。さらに、映像エリアの隣に広告スペースが見えます。おそらくここに広告が掲載されているでしょう。
+
+また本来は「ニコニコ動画」のようなコメント機能があると思われます。今回は工数が足りないため、少し改造し SNS コメントという似ている機能へ変更しました。「何かをコメントする」体験は変えず、より工数の少ないものに変えられたと思います。
+
+![ライブステージのワイヤーフレーム](ch01/04.jpg)
 
 ### ほかポップアップ
 
-「サイトマップ」について書いたが、エラーページも想定しました。
-ただしエラーが発生しない限り、エラーページも見れないので、検証がほとんどないと思われるため、ここではエラーページの代わりに「まだ作ってない」のポップアップを用意しました。
-ほかに、映像コメントの体験を与えるための SNS コメントポップアップと、投票結果再現するための結果ポップアップを作りました。
-上記ポップアップは、1ページとして存在しないため、サイトマップでは仕様をページと区別して反映しました。
+サイトマップのところで書きましたが、エラーページも想定しました。
 
-![まだ作っていないというポップアップのワイヤーフレーム](ch1_05.jpg)
-![SNS のコメントポップアップのワイヤーフレーム](ch1_06.jpg)
-![投票結果を再現するためのワイヤーフレーム](ch1_07.jpg)
+ただしエラーが発生しない限り、エラーページは見れません。そのため、検証がほとんどできないと思われるため、ここではエラーページの代わりに「まだ作ってない」というポップアップを用意しました。
+
+また、映像コメントの体験を与えるために SNS コメントポップアップと、投票結果を再現するための結果ポップアップを作りました。
+
+上記ポップアップは、ページとして存在しません。そのため、サイトマップでは仕様をページと区別して反映しました。
+
+![まだ作っていないというポップアップのワイヤーフレーム](ch01/05.jpg)
+![SNS のコメントポップアップのワイヤーフレーム](ch01/06.jpg)
+![投票結果を再現するためのワイヤーフレーム](ch01/07.jpg)
