fix(ch02): SpaceBetweenAlphabeticalWord に引っかからないよう文章を修正

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -46,13 +46,13 @@ OS X は最初からターミナルがインストールされています。Win
 
 Windows の開発環境構築に役立つリンクを書いておきます。
 
-1. [Windows - 開発者がSurfacePro3を買ったらまずやること - Qiita](http://qiita.com/tanakh/items/a1b4705fb58ef3c89800)
-1. [最近のWindowsの開発環境のセットアップ - 純粋関数空間](http://tanakh.jp/posts/2013-05-23-windows-setup.html)
+1. [Windows - 開発者が SurfacePro3 を買ったらまずやること - Qiita](http://qiita.com/tanakh/items/a1b4705fb58ef3c89800)
+1. [最近の Windows の開発環境のセットアップ - 純粋関数空間](http://tanakh.jp/posts/2013-05-23-windows-setup.html)
 
 ターミナルは「黒い画面」と呼ばれることがあり、恐れられている存在かもしれません。しかし、以下に紹介する記事を見ていただければ、触りにくさは多少軽減されると思います。
 
 1. [Terminal - デザイン系フロントエンドエンジニアが「黒い画面」を使ってて良かったこと。 - Qiita](http://qiita.com/tokimari/items/43b89c832812ea2bd93f)
-1. [Webデザイナーの為の「本当は怖くない」”黒い画面”入門 Part.01 « 合同会社フィヨルド](http://fjord.jp/love/548.html)
+1. [Web デザイナの為の「本当は怖くない」”黒い画面”入門 Part.01 « 合同会社フィヨルド](http://fjord.jp/love/548.html)
 
 **Node.js**
 
@@ -90,9 +90,9 @@ Windows の開発環境構築に役立つリンクを書いておきます。
 
 #### ググるための言葉を区切る
 
-例えば「CSS で背景色をつけるやり方」と検索するより「CSS 背景色 やり方」で検索するほうが、検索結果の件数は増えます。
+例えば `CSS で背景色をつけるやり方` と検索するより `CSS 背景色 やり方` で検索するほうが、検索結果の件数は増えます。
 
-検索エンジンは「CSS で背景色をつけるやり方」のような文章が苦手です。そのため、文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。
+検索エンジンは `CSS で背景色をつけるやり方` のような文章が苦手です。そのため、文章よりも単語ごとに区切ったほうが検索結果の件数は増えます。
 
 #### 「何々 とは」で検索する
 
