change(ch05): 見出しレベルを1段階下げた

--- a/draft/ch05.md
+++ b/draft/ch05.md
@@ -1,8 +1,8 @@
-## JavaScript で動きを付ける
+# JavaScript で動きを付ける
 
 JavaScript を使って、カルーセルを実装していきます。しかし、その前に準備をしていきます。
 
-### 準備
+## 準備
 
 まず始めに、以下のように全体を `(function () { ... })();` というもので囲みます。
 
@@ -34,7 +34,7 @@ document.addEventListener("DOMContentLoaded", function () {
 })();
 ```
 
-### カルーセルの初期化
+## カルーセルの初期化
 
 始めに `setupCarousel()` という関数を用意します。これは lory を使うために定義する関数となります。
 
@@ -46,7 +46,7 @@ function setupCarousel(targetElement, options) {
 }
 ```
 
-### カルーセルの自動表示切り替え
+## カルーセルの自動表示切り替え
 
 表示される画像を自動で切り替えるために、自動表示切り替え機能を実装します。
 
@@ -64,7 +64,7 @@ function autoplay(carousel, delay) {
 }
 ```
 
-### カルーセルが実際に動くようにする
+## カルーセルが実際に動くようにする
 
 ここまで準備してきましたが、いよいよカルーセルが動くようにしていきます。まず始めに、ここで解説するコードの完成形を見せると、以下のようになります。
 
@@ -145,7 +145,7 @@ autoplay(carousel, 5000);
 </div>
 ```
 
-### カルーセルの下部のドット実装
+## カルーセルの下部のドット実装
 
 始めに `setPaginationPoint()` という関数を用意します。これは引数に渡された要素に対して、`ll-carousel-pagination-item--current` というクラスを付けるというものです。
 
