change(ch02): 章始めの構成を変更
- 見出しを「サイト開発の準備」に変更
- 「必要なツールの準備」という見出しを新たに設けた
- 文章構成の見直し

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -1,23 +1,27 @@
-# サイトを実装してみよう
+# サイト開発の準備
 
-この章では、ラブライブ！募集サイトの実装に必要なツールを準備します。
+この章では、ラブライブ募集サイトの実装にあたって、どんなことを事前に準備していけばいいかを書いていきます。
+
+## 必要なツールの準備
+
+はじめに、ラブライブ募集サイトの実装で必要なツールを準備します。
 最低限必要なものを列挙していくと以下のものがあります。
 
-- ソースコードを記すためのエディタもしくは IDE
+- ソースコードを書くためのエディターもしくはIDE
 - 表示確認用のブラウザ
 - 作業履歴を記録するためのバージョン管理ソフト
 
-一つずつ解説していきます。
+これらについて、1つずつ説明していきます。
 
-### エディタ、IDE
+### エディターやIDE
 
-ソースコードを書くために、まずはエディタや IDE (統合開発環境)の準備から始めます。
-エディタは Atom や Sublime Text がよく使われています。
-IDE は WebStorm や NetBeans がよく使われています。また Windows であれば Visual Studio Community Edition がおすすめの IDE です。
+1つめに必要なものとして、ソースコードを書くためにエディターやIDE（統合開発環境）を用意します。
+エディターはAtomやSublime Textがよく使われています。
 
-### ブラウザ
+IDEはWebStormやNetBeansがよく使われています。
+またWindowsであればVisual Studio Community EditionがおすすめのIDEです。
 
-次に、表示確認するためのブラウザを準備します。Windows や OS X では以下のブラウザが初期状態でインストールされています。
+### ブラウザー
 
 2つめとして、作ったサイトの表示確認用にブラウザーを用意します。
 WindowsやOS Xには次のブラウザーが最初からインストールされています。
@@ -31,7 +35,7 @@ WindowsやOS Xには次のブラウザーが最初からインストールされ
 - OS X
   - Safari
 
-## GitとGitHub
+### GitとGitHub
 
 3つめとして、作業履歴を管理するためにGitとGitHubを用意します。
 たとえば突然PCがブルースクリーンになってしまい、予期しないシャットダウンをしなければいけなくなったとします。
