fix(ch0*): 必要な長音は付けた上で、textlint-plugin-JTF-styleのカタカナ長音に関するルールをdisable
ライブラリなどは長音を付けたくないため

--- a/draft/ch04.md
+++ b/draft/ch04.md
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="styles/main.css">
 ```
 
-HTML ファイルが置かれているフォルダに styles というフォルダを作ります。その中に bootstrap.min.css と main.css を置けば CSS ファイルが読み込まれます。
+HTML ファイルが置かれているフォルダーに styles というフォルダーを作ります。その中に bootstrap.min.css と main.css を置けば CSS ファイルが読み込まれます。
 
 ## なぜ HTML とは別ファイルにするのか
 
