--- a/draft/ch05.md
+++ b/draft/ch05.md
@@ -23,7 +23,7 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 ```
 
-`DOMContentLoaded` はブラウザが HTML を読み込み、解釈し終えた後に起きるイベントです。この時、画像の読み込みは待たないため `onload` イベントに比べ高速といわれています。
+`DOMContentLoaded` はブラウザーが HTML を読み込み、解釈し終えた後に起きるイベントです。この時、画像の読み込みは待たないため `onload` イベントに比べ高速といわれています。
 では、カルーセルの実装をおこなっていきます。まずは `function ()` 内部に書くコードから解説していきます。
 
 ```js
