--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -83,11 +83,12 @@ CSSやJavaScriptは、2011年以前の情報があまり役に立ちません。
 
 ### ライブラリとは
 
-その前に、ライブラリという聞き慣れない単語がでてきて「??」となった人もいるかもしれません。
+その前に、ライブラリという聞き慣れない単語が出て「??」となった人もいるかもしれません。
 なので、ライブラリについて説明します。
 
-ライブラリとは、特定の機能を提供するソースコードを、他のソースコードからも使えるように部品化し、ひとまとめにしたものを指します。
+ライブラリとは、汎用性が高いプログラムを、他のプログラムからも使えるようにひとまとまりとしたものです。
 たとえば、CSSであればBootstrapやFoundation、JavaScriptでいえばjQueryなどがライブラリです。
+いまあなたが見ているこの文章も、自動的に日本語の文章をチェックする[textlint](https://github.com/textlint/textlint)というライブラリを使い、自動校正しながら書いています。
 
 ### ライブラリを選ぶ基準
 
