change(ch02): ライブラリを選ぶ基準を大幅に書き換えた

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -92,40 +92,48 @@ CSSやJavaScriptは、2011年以前の情報があまり役に立ちません。
 
 ### ライブラリを選ぶ基準
 
-ここでは、自分がライブラリを選ぶ時の基準について書いていきます。
+ライブラリについて説明したところで、自分がライブラリを選ぶ時の基準について、いくつか書いていきます。
 
 #### 利用実績
 
-はじめに、そのライブラリが広く使われているかを見ます。
-例えば [Bootstrap](http://getbootstrap.com/) だと、ページ下部に Bootstrap を使ったサイト一覧が掲載されています。
-また [jQuery](http://jquery.com/) というライブラリは、[Amazon 上で jQuery で検索](http://www.amazon.co.jp/s/field-keywords=jquery)してみると、関連の本が大量に表示されます。
+1つめの基準として、そのライブラリが広く使われているかを見ます。
+理由は、ライブラリを使う上で何か困って検索をしたときに情報が出てきやすいためです。
+
+たとえばCSSのライブラリである[Bootstrap](http://getbootstrap.com/)だと、ページ下部にBootstrapを使ったサイト一覧が掲載されています。
+またJavaScriptのライブラリである[jQuery](http://jquery.com/)は、[Amazon上でjQueryで検索](http://www.amazon.co.jp/s/field-keywords=jquery)すると、jQuery関連の本が大量に表示されます。
+
 このように、利用実績やライブラリについて本が書かれているかということをまずは見ます。
 
-#### Issue と Pull Request そして最新コミット日時
+#### Issue・Pull Request、そして最新コミット日時
 
+2つめの基準として、GitHub上にあるIssueやPull Requestの件数と最新コミット日時です。
 先ほどの利用実績で挙げた例は、公開されてからある程度時間が経過し、広く使われるようになったライブラリのみ使える判断材料です。
-つまり、定番と言われるライブラリに対してしか、判断材料として使えないということです。
+つまり定番と言われるライブラリに対してしか、判断材料として使えないということです。
 
-では、他の判断基準はなんでしょうか？それは GitHub 上にある Issue や Pull Request の件数と最新コミット日時です。
-最新コミット日がたとえば6ヶ月前だった場合、Issue や Pull Request の多さは「放置されているから」ということになります。
+そこで使える判断基準がIssueやPull Requestの件数と最新コミット日時です。
+最新コミット日がたとえば6か月前だった場合、IssueやPull Requestの多さは「放置されているから」ということになります。
 
-#### ソースコードが把握しやすい
+#### ソースコードの流れを把握しやすい
 
-ソースコードの把握がしやすいか見ます。全体把握しやすいライブラリとしては、例えば [Backbone.js](http://backbonejs.org/) が挙げられます。
-[ソースコード](https://github.com/jashkenas/backbone/blob/master/backbone.js)はまとまりの単位が小さいため、処理を追いやすいです。
-また、ソースコードの行数も 1,877行 (2015/7/10 現在) なので、全体を読もうと思えば読めます。
+3つめの基準として、ソースコードが流れを把握しやすいか見ます。
+理由は、何か困ったときにドキュメントを見るのですが、それでも解決できない場合はソースコードを読む必要があるためです。
+そのときに、ソースコードの流れを把握できなかった場合、解決方法が見つからずつらくなります。
 
-#### ドキュメントが揃っている
+全体把握しやすいライブラリとしては、例えば[Backbone.js](http://backbonejs.org/)が挙げられます。
+[ソースコード](https://github.com/jashkenas/backbone/blob/master/backbone.js)はまとまりの単位が小さいため、流れを追いやすいです。
+また、ソースコードの行数も1,877行（2015/7/10現在）なので、全体を読もうと思えば読めます。
 
-ドキュメントがあって、かつ、読みやすいか見ます。もちろん両方揃っているのが好ましいです。
-両方揃っている例としては [flipsnap.js](http://hokaccha.github.io/js-flipsnap/) が挙げられます。
-flipsnap.js はドキュメントに以下の項目がよくまとまっています。そのため、使い方に困らないライブラリとなっています。
+#### ドキュメントがそろっている
+
+4つめの基準として、ドキュメントがあり、かつ読みやすいかを見ます。もちろん両方そろっているのが好ましいです。
+両方そろっている例としては、[flipsnap.js](http://hokaccha.github.io/js-flipsnap/)が挙げられます。
+
+flipsnap.jsはドキュメントに次の項目がよくまとまっています。そのため、使い方に困らないライブラリとなっています。
+また[ソースコード自体](https://github.com/hokaccha/js-flipsnap/blob/master/flipsnap.js)も、まとまりの単位が小さく読みやすいものとなっています。
 
 - どういった環境に対応しているか
-- どのようにすれば動作するようになるか
+- どのような準備をすれば動作するようになるか
 - 使い方の例
-
-また[ソースコード自体](https://github.com/hokaccha/js-flipsnap/blob/master/flipsnap.js)も、まとまりの単位が小さく、読みやすいものとなっています。
 
 ### ライブラリの選定 CSS 編
 
