change(ch02): 「ライブラリの選定CSS編」を更新
- Bootstrapを選んだ理由を追記
- Bootstrapが使われている理由は書かないことにした

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -136,16 +136,15 @@ flipsnap.jsはドキュメントに次の項目がよくまとまっています
 - どのような準備をすれば動作するようになるか
 - 使い方の例
 
-### ライブラリの選定 CSS 編
+## ライブラリの選定CSS編
 
-ここまで、ライブラリ選定時の基準について書いてきました。ここからは実際にライブラリ選定をしていきます。
+ここまで、ライブラリ選定時の基準について書いてきました。ここからは、実際にライブラリ選定をしていきます。
+まずはじめに、CSSのライブラリから選定していきます。
 
-CSSのライブラリとしては[Bootstrap](https://github.com/twbs/bootstrap) を使います。
-Bootstrap は多くのサイトで使われています。理由としては、以下に挙げるものがあると思います。
+今回、CSSのライブラリは[Bootstrap](https://github.com/twbs/bootstrap)のテーマである、[Nico](http://kubosho.github.io/Nico/)を使います。
 
-- HTML に少し書き足して bootstrap.css を読みこめば、素の HTML と比較した場合ずっと良い見た目になるため
-- [グリッド機能](http://getbootstrap.com/css/#grid)が使いやすい
-- ブラウザーのデフォルト CSS をいい感じに丸め込んでくれる [Normalize.css](http://necolas.github.io/normalize.css/) が使える
+選定した理由としては、今回デザイナーがいない中、ラブライブ参加者募集サイトの見た目をアニメに近づけたいという思いがありました。
+ラブライブ参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているため、Bootstrapを使うことにしました。
 
 特に、狭いウィンドウ幅のことも考えて実装するというのが地味に面倒です。Bootstrap のグリッド機能を使うことで、面倒なことは考えなくてよくなります。
 
