change(ch02): ライブラリの選定JavaScript編を更新
- 選定した理由を1つの段落に書くようにした
- カルーセルを2つの段落で二重に説明していたので1回だけ説明するようにした

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -146,19 +146,23 @@ flipsnap.jsはドキュメントに次の項目がよくまとまっています
 選定した理由としては、今回デザイナーがいない中、ラブライブ参加者募集サイトの見た目をアニメに近づけたいという思いがありました。
 ラブライブ参加者募集サイトは、Bootstrapを使って作られたサイトの見た目に似ているため、Bootstrapを使うことにしました。
 
-特に、狭いウィンドウ幅のことも考えて実装するというのが地味に面倒です。Bootstrap のグリッド機能を使うことで、面倒なことは考えなくてよくなります。
+また、ラブライブ参加者募集サイトはピンク系の配色なのですが、Bootstrap本体はピンク系の配色ではありません。
+なので、今回のために[Honoka - 日本語も美しく表示できるBootstrapテーマ](http://honokak.osaka/)というbootstrapのテーマを元にNicoというBootstrapを作りました。
 
-### ライブラリの選定 JavaScript 編
+## ライブラリの選定JavaScript編
 
-今回 JavaScript 側で実装する機能として「カルーセル」があります。
+次に、JavaScriptのライブラリを選定していきます。
+今回JavaScript側で実装する機能として、カルーセルがあります。
 
-「カルーセル」は [Nike](http://www.nike.com/jp/ja_jp/) などで使われている「注目させたい複数の画像を次々と横にスライド表示する」ものです。
-このカルーセルを実現するためのライブラリは、[lory](http://meandmax.github.io/lory/) にします。この lory というライブラリを選んだ理由は以下の通りです。
+カルーセルは、[Nike](http://www.nike.com/jp/ja_jp/) などで使われている「注目させたい複数の画像などをつぎつぎと横にスライド表示する」ものです。
+このカルーセルを実現するためのライブラリは、[lory](http://meandmax.github.io/lory/)にします。
 
-- 外部のライブラリに依存せず、lory だけを読みこめばカルーセルの実装をおこなえる
-- ライブラリのソースコードの全体が把握しやすい ([2015/7/10 現在で 520 行](https://github.com/meandmax/lory/blob/73244bb780e0214d7c4b446d27295a80c6872bd0/dist/lory.js))
+選定した理由は2つあります。
+理由の1つめとして、外部ライブラリに依存せず、loryだけを読みこめばカルーセルの実装をおこなえることが挙げられます。
+理由の2つめとして、loryは全体像が把握しやすいことです。
+全体像が把握しやすいということは、何か困ったことがあってソースコードを読むときでもなんとかなるということです。
 
-次々と横にスライド表示する際、最後まで到達した時はまた最初へ戻る、無限ループがいらなければ [flipsnap.js](http://hokaccha.github.io/js-flipsnap/) もおすすめです。
-また jQuery に依存するライブラリでは [slick](http://kenwheeler.github.io/slick/) や [Owl Carousel](http://owlgraphic.com/owlcarousel/) がよく使われます。
+なお、カルーセルでの表示に無限ループがいらなければ[flipsnap.js](http://hokaccha.github.io/js-flipsnap/)もおすすめです。
+また、jQueryに依存するライブラリでは[slick](http://kenwheeler.github.io/slick/)や、[Owl Carousel](http://owlgraphic.com/owlcarousel/)がよく使われます。
 
 これで、ライブラリの選定が終わりました。次章からはサイトの実装をしていきます。
