--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -127,7 +127,7 @@ CSSやJavaScriptは、2011年以前の情報があまり役に立ちません。
 
 #### ドキュメントがそろっている
 
-4つめの基準として、ドキュメントがあり、かつ読みやすいかを見ます。もちろん両方そろっているのが好ましいです。
+4つめの基準として、ライブラリにドキュメントがあり、かつ読みやすいかを見ます。もちろん両方そろっているのが好ましいです。
 両方そろっている例としては、[flipsnap.js](http://hokaccha.github.io/js-flipsnap/)が挙げられます。
 
 flipsnap.jsはドキュメントに次の項目がよくまとまっています。そのため、使い方に困らないライブラリとなっています。
