fix(ch02): なぜ放置されたライブラリを使ってはいけないのか理由を明記した fix #29

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -114,6 +114,11 @@ CSSやJavaScriptは、2011年以前の情報があまり役に立ちません。
 
 そこで使える判断基準がIssueやPull Requestの件数と最新コミット日時です。
 最新コミット日がたとえば6か月前だった場合、IssueやPull Requestの多さは「放置されているから」ということになります。
+放置されたライブラリを使う場合、自分達でなんとかしないといけなくなる場面が増えてしまいます。
+
+たとえば、放置されたライブラリに何らかのセキュリティ的な欠陥が見つかったとしても、自分達で対処しないといけません。
+また、プログラミングの世界には変化がたびたび訪れます。
+しかし放置されたライブラリを使い続けるのであれば、その変化にも自分達で対処しないといけません。
 
 #### ソースコードの流れを把握しやすい
 
