--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -76,7 +76,12 @@ CSSやJavaScriptは、2011年以前の情報があまり役に立ちません。
 ### 周りの人に聞く
 
 検索をしても、あまりいい情報に巡りあえない場合があります。そういった場合、周りに聞ける環境であれば聞くのがいいです。
+
+聞く前に、まずは検索したり問題の概要をまとめます。これにより聞く側にとらせる時間が少なくなります。
 聞き方としてはおそらく解答にかかるであろう時間を予測して、「『なになに』について聞きたいのですが、○分ほど時間はありますか」と聞くのがいいです。
+この「なになに」に入る言葉は、たとえば「ある機能の実装方法」ということが入ると思います。
+
+また、聞く相手を間違えないようにします。たとえば、プログラムのことを企画へに聞いても、ほとんどの場合は求める回答が返ってこないと思います。
 
 ## ライブラリ選定
 
