fix(ch02): 制作ステップのところを唐突すぎない書きかたにした fix #31

--- a/draft/ch02.md
+++ b/draft/ch02.md
@@ -86,7 +86,7 @@ CSSやJavaScriptは、2011年以前の情報があまり役に立ちません。
 ## ライブラリ選定
 
 ここまで、開発に必要なツールや開発の際に分からないことがあったときの対処法を書きました。
-ここからは、ライブラリの選定をおこなっていきます。
+ここからは、今回のサイトを実装するにあたり必要な、CSSやJavaScriptのライブラリ選定をおこなっていきます。
 
 ### ライブラリとは
 
