fix(ch0*): textlintに指摘された箇所を直した

--- a/draft/ch05.md
+++ b/draft/ch05.md
@@ -1,12 +1,12 @@
-# JavaScript で動きを付ける
+# JavaScriptで動きを付ける
 
-JavaScript で Web サイトに動きをつけていきます。しかし、その前に準備をしていきます。
+JavaScriptでWebサイトに動きをつけていきます。しかし、その前に準備をしていきます。
 
 ## 準備
 
-はじめに、JavaScript のソースコード全体を `(function () { ... })();` で囲みます。
+はじめに、JavaScriptのソースコード全体を `(function () { ... })();` で囲みます。
 理由としては、変数や関数が他のソースコードと競合しないようにするためです。
-`(function () { ... })();` を書かなかった場合、他のソースコードと競合してしまい、JavaScript が正常に動作しないことが起こります。
+`(function () { ... })();` を書かなかった場合、他のソースコードと競合してしまい、JavaScriptが正常に動作しなくなります。
 
 ```js
 (function () {
@@ -23,7 +23,7 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 ```
 
-`DOMContentLoaded` はブラウザーが HTML を読み込み、解釈し終えた後に起きるイベントです。この時、画像の読み込みは待たないため `onload` イベントに比べ高速といわれています。
+`DOMContentLoaded` はブラウザーがHTMLを読み込み、解釈し終えた後に起きるイベントです。この時、画像の読み込みは待たないため `onload` イベントに比べ高速といわれています。
 では、カルーセルの実装をおこなっていきます。まずは `function ()` 内部に書くコードから解説していきます。
 
 ```js
@@ -34,9 +34,9 @@ document.addEventListener("DOMContentLoaded", function () {
 
 ## カルーセルの初期化
 
-始めに `setupCarousel()` という関数を用意します。これは lory を使うために定義する関数となります。
-カルーセルライブラリは、HTML とカルーセルの動作設定を書けば実装できるものが多いです。
-たとえば lory ではなく他のライブラリを使う場合でも、少し手直しすれば使えることになります。
+始めに `setupCarousel()` という関数を用意します。これはloryを使うために定義する関数となります。
+カルーセルライブラリは、HTMLとカルーセルの動作設定を書けば実装できるものが多いです。
+たとえばloryではなく他のライブラリを使う場合でも、少し手直しすれば使えることになります。
 
 ```js
 function setupCarousel(targetElement, options) {
@@ -47,7 +47,7 @@ function setupCarousel(targetElement, options) {
 ## カルーセルの自動表示切り替え
 
 自動表示切り替え機能の実装をしていきます。他のカルーセルライブラリだと、ライブラリ側で自動表示切り替え機能は実装されていることが多いです。
-しかし、lory は[ライブラリ作者がいらないと考えているため](https://github.com/meandmax/lory/issues/3)、実装されていません。
+しかし、loryは[ライブラリ作者がいらないと考えているため](https://github.com/meandmax/lory/issues/3)、実装されていません。
 そのため、自分で実装する必要があります。しかし、その実装は簡単です。
 
 次のコードでは `autoplay()` の第1引数に、先ほど `setupCarousel` から返された `lory` を渡しています。第2引数の `delay` では表示切り替え間隔を設定します。
@@ -75,7 +75,7 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 ```
 
-まずはじめに `querySelector()` について解説していきます。これは引数に取得したい要素を CSS セレクタ形式で指定するというものです。
+まずはじめに `querySelector()` について解説していきます。これは引数に取得したい要素をCSSセレクタ形式で指定するというものです。
 `querySelector()` を使う理由は、`.js_carousel` というクラスが付いた要素を取得するためです。
 
 ```js
@@ -90,13 +90,13 @@ var carousel = setupCarousel(carouselE, {
 });
 ```
 
-そして5000ミリ秒(5秒)間隔で、表示される画像を切り替えるようにします。
+そして5000ミリ秒（5秒）間隔で、表示される画像を切り替えるようにします。
 
 ```js
 autoplay(carousel, 5000);
 ```
 
-ここまで書いたソースコードをまとめると、次の通りになります。これで自動表示切り替え機能付きカルーセルの実装ができました。
+ここまで書いたソースコードをまとめると、次のとおりになります。これで自動表示切り替え機能付きカルーセルの実装ができました。
 
 ```js
 (function () {
@@ -122,7 +122,7 @@ autoplay(carousel, 5000);
 })();
 ```
 
-なお、対応する HTML は次の通りとなります。`js_carousel` 以外に `js_frame`, `js_slides`, `js_slide` も `lory` を動かすため必須となります。
+なお、対応するHTMLは次のとおりとなります。`js_carousel` 以外に `js_frame`, `js_slides`, `js_slide` も `lory` を動かすため必須となります。
 
 ```html
 <div class="js_carousel container-fluid  ll-container">
@@ -189,7 +189,7 @@ carouselE.addEventListener("after.lory.slide", function () {
 });
 ```
 
-今まで書いたソースコードをまとめると、次の通りになります。これでカルーセル下部のドット表示が実装できました。
+今まで書いたソースコードをまとめると、次のとおりになります。これでカルーセル下部のドット表示が実装できました。
 
 ```js
 (function () {
@@ -233,7 +233,7 @@ carouselE.addEventListener("after.lory.slide", function () {
 })();
 ```
 
-対応する HTML は以下の通りとなります。
+対応するHTMLは以下のとおりとなります。
 
 ```html
 <ol class="js_carousel-pagination  ll-carousel-pagination">
