fix(ch03): role="main"の記述を削除
fix #77

--- a/draft/ch03.md
+++ b/draft/ch03.md
@@ -82,7 +82,7 @@
 </head>
 
 <body>
-<main role="main">
+<main>
 </main>
 </body>
 </html>
@@ -226,7 +226,7 @@
   </div>
 </nav>
 
-<main role="main">
+<main>
 </main>
 
 <footer id="ll-footer" class="navbar navbar-default" role="contentinfo">
